feat: ARアセット作成のレスポンス変更
