# docs/swagger.json
@@ -164,8 +164,11 @@
                 "responses": {
                     "201": {
                         "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ArAssetsResponse"
+                        "headers": {
+                            "Location": {
+                                "type": "string",
+                                "description": "/{ar_assets_id}"
+                            }
                         }
                     }
                 }
